[package]
name = "dep-output"
edition.workspace = true
version.workspace = true

[dependencies]
dep-core = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
dep-core = { workspace = true, features = ["testutil"] }
