[package]
name = "dep-parser-monorepo"
edition.workspace = true
version.workspace = true

[dependencies]
dep-core = { workspace = true }
dep-parser-package = { workspace = true }
vfs = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
dep-core = { workspace = true, features = ["testutil"] }
