[package]
name = "dep-parser-package"
edition.workspace = true
version.workspace = true

[dependencies]
dep-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
vfs = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
dep-core = { workspace = true, features = ["testutil"] }
